Added more junit tests, tidying up